Major update to automate specialization.